Add signalR test script
